# MuseumAssistant

./: .gitignore  README.md
dashboard/: pyproject.toml
dashboard/src/: app.py
dmitry/dashboard/src/: app.py
dmitry/shared/db/: data.db  init.sql
dmitry/shared/examples/: sections.json
dmitry/stand/: pyproject.toml
dmitry/stand/src/: main.py
dmitry/stand/src/demographics_detector/: detector.py
dmitry/stand/src/distance_detector/: __init__.py  detector.py
dmitry/storage/src/: main.py
shared/examples/stand1/: config.json
stand/: pyproject.toml
stand/front/: app.py  index.html
stand/src/: main.py
stand/src/demographics_detector/: __init__.py  detector.py
stand/src/distance_detector/: detector.py  main.py
storage/: pyproject.toml
storage/src/: main.py
storage/src/db/: database.py
valerie/dashboard/: pyproject.toml
valerie/stand/: pyproject.toml
valerie/stand/src/distance-detector/: detector.py  main.py
valerie/storage/: pyproject.toml
